Creating Topics view of index and topics of scss

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Topics#index</h1>
-<p>Find me in app/views/topics/index.html.erb</p>
+<header>
+  <div class="header-logo">
+    <a href="/">Pinoy Nest</a>
+  </div>
+  <ul class="header-menus">
+    <li>
+      <a href="/about">What is Pinoy Nest</a>
+    </li>
+  </ul>
+</header>
+
+<div class="main topics-index">
+  <div class="container">
+    <div class="topics-index-item">
+      Railsでpinoy nest作るよ
+    </div>
+    <div class="topics-index-item">
+      投稿一覧ページ作成中！
+    </div>
+  </div>
+</div>
