--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -14,7 +14,8 @@
   <div class="container">
   <% @topics.each do |topic| %>
     <div class="topics-index-item">
-     <%= topic %>
+      <p><%= topic.title%></p>
+      <p><%= topic.content %></p>
      </div>
      <% end %>
   </div>
