--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -9,13 +9,14 @@
   </ul>
 </header>
 
-
 <div class="main topics-index">
   <div class="container">
+  <h1>Listen My Topic！!!</h1>
+  <h2><%= link_to "write your topic" ,new_topic_path %></h2>
   <% @topics.each do |topic| %>
     <div class="topics-index-item">
       <p><%= topic.title%></p>
-      <p><%= topic.content %></p>
+      <p><%= simple_format (topic.content)%></p>
      </div>
      <% end %>
   </div>
