--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -8,7 +8,7 @@
   <%= f.label :content %>
   <%= f.text_field :content %>
   <br>
-  <%= f.submit %>
+  <%= f.submit "post my Topic" %>
   </div>
 <% end %>
 <%= link_to "Back to topics", topics_path %>
