--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -17,7 +17,8 @@
     <div class="topics-index-item">
       <p><%= topic.title%></p>
       <p><%= simple_format (topic.content)%></p>
-      <%= link_to "Edit My Topic",edit_topic_path(topic.id) %>
+      <p><%= link_to "Edit My Topic",edit_topic_path(topic.id) %></p>
+      <%= link_to "Delete this Topic",topic_path(topic.id),method: :delete %>
      </div>
      <% end %>
   </div>
