--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -8,7 +8,7 @@
   <%= f.label :content %>
   <%= f.text_field :content %>
   <br>
-  <%= f.submit "Edit" %>
+  <%= f.submit "Edit This Topic" ,data: {confirm:'are you sure to edit?'}  %>
   </div>
 <% end %>
 <%= link_to "Back to topics", topics_path %>
