add notice option in redirect_to method

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -11,6 +11,7 @@
 
 <div class="main topics-index">
   <div class="container">
+  <p><%= notice %></p>
   <h1>Listen My Topics！!!</h1>
   <h2><%= link_to "write your Topic" ,new_topic_path %></h2>
   <% @topics.each do |topic| %>
