--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,18 +1,29 @@
 <div class="main topics-index">
   <div class="container">
-<%= form_for(@topic) do |f| %>
-<div class="topics-index-item">
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <br>
-  <%= f.label :content %>
-  <%= f.text_field :content %>
-  <br>
-  <%= f.submit "post my Topic" %>
+    <%= form_for(@topic) do |f| %>
+      <% if @topic.errors.any? %>
+      <div id="error_explanation">
+       <h2><%= @topic.errors.count %>件のエラーがあります</h2>
+          <ul>
+            <% @topic.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+            <% end %>
+          </ul>
+      </div>
+    <% end %>
+
+  <div class="topics-index-item">
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+    <br>
+    <%= f.label :content %>
+    <%= f.text_field :content %>
+    <br>
+    <%= f.submit "post my Topic" %>
+    </div>
+    <% end %>
+  <%= link_to "Back to topics", topics_path %>
   </div>
-<% end %>
-<%= link_to "Back to topics", topics_path %>
-</div>
 </div>
 
 
