--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,28 +1,1 @@
-<div class="main topics-index">
-  <div class="container">
-    <%= form_for(@topic) do |f| %>
-      <% if @topic.errors.any? %>
-        <div id="errors_explanation">
-          <h2><%= @topic.errors.count %>Please fill up all.</h2>
-            <ul>
-              <% @topic.errors.full_messages.each do |msg| %>
-              <li><%= msg %></li>
-              <% end %>
-            </ul>
-        </div>
-      <% end %>
-
-  <div class="topics-index-item">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-    <br>
-    <%= f.label :content %>
-    <%= f.text_field :content %>
-    <br>
-    <%= f.submit "Edit This Topic" ,data: {confirm:'are you sure to edit?'}  %>
-    </div>
-  <% end %>
-  <%= link_to "Back to topics", topics_path %>
-  </div>
-</div>
-
+<%= render 'form' %>
